# skelly

./: COPYING  Cargo.toml  README.md  README.tpl
.github/workflows/: badge.yml
demo/: Cargo.toml
demo/src/: main.rs
demo2/: Cargo.toml  lizard-man.gltf
demo2/src/: main.rs  main.wgsl
examples/: demo.rs
license/: APACHE  MIT
src/: ik.rs  lib.rs  skelly.rs
src/ik/: fabrik.rs  frik.rs  rotor.rs
