[package]
name = "skelly"
version = "0.6.0"
edition = "2018"
authors = ["Zakarum"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/skelly"
homepage = "https://github.com/arcana-engine/skelly"
repository = "https://github.com/arcana-engine/skelly"
description = "Skeleton animation and IK"
keywords = ["ik", "skeleton", "animation", "graphics"]
categories = ["algorithms", "graphics", "animation"]

[features]
ik = []
serde-1 = ["serde", "na/serde-serialize"]

[dependencies]
na = { version = "0.31", package = "nalgebra" }
serde = { version = "1.0", optional = true, features = ["derive"] }

[package.metadata.docs.rs]
features = ["ik"]

[workspace]
members = ["demo"]
